--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,12 @@
   font-family: var(--font-base);
 }
 
-.section-padding {
+.sectionPadding {
   margin: 130px 0;
 }
 
 @media (max-width: 768px) {
-  .section-padding {
+  .sectionPadding {
     margin: 50px 0;
   }
 }
@@ -69,7 +69,7 @@ input[type="text"] {
   padding: 15px;
 }
 
-.btn-positivus {
+.nexusBtn {
   padding: 15px 35px;
   font-weight: 400;
   font-size: 20px;
@@ -80,12 +80,12 @@ input[type="text"] {
   color: #fff;
 }
 
-.btn-positivus:hover {
+.nexusBtn:hover {
   transform: scale(1.1);
 }
 
 @media (max-width: 768px) {
-  .btn-positivus {
+  .nexusBtn {
     padding: 15px;
     font-weight: 400;
     font-size: 18px;
